2001-11-19  Mo DeJong  <mdejong@users.sourceforge.net>

	* src/jacl/tcl/lang/Channel.java (read): Turn the
	read method into a concrete implementation instead
	of an abstract method.
	* src/jacl/tcl/lang/FileChannel.java (read):
	* src/jacl/tcl/lang/ServerSocketChannel.java (read):
	* src/jacl/tcl/lang/SocketChannel.java (read):
	* src/jacl/tcl/lang/StdChannel.java (read): Make use
	of super class read method instead of including
	read logic in each Channel subclass.

2001-11-19  Mo DeJong  <mdejong@users.sourceforge.net>

	* src/jacl/tcl/lang/Channel.java (close): Fix silly
	cut and paste error that was closing the underlying
	channel twice.

2001-11-19  Mo DeJong  <mdejong@users.sourceforge.net>

	* src/jacl/tcl/lang/Channel.java (tell): Turn the tell
	method into a concrete implementation instead of an
	abstract method. It currently just returns -1.
	* src/jacl/tcl/lang/ServerSocketChannel.java (tell):
	* src/jacl/tcl/lang/SocketChannel.java (tell):
	* src/jacl/tcl/lang/StdChannel.java (tell):
	Remove tell command since it is now handled in the
	super class.

2001-11-19  Mo DeJong  <mdejong@users.sourceforge.net>

	* src/jacl/tcl/lang/Channel.java (seek): Properly indent
	some throws clauses on methods. Turn the seek method into
	a concrete implementation instead of an abstract method.
	By default seek will set the posix error code EINVAL
	to indicate that seeking is not supported. Pass interp
	argument to seek method so we can raise TclExceptions.
	* src/jacl/tcl/lang/FileChannel.java (seek): Update
	method signature to account for changes in Channel class.
	* src/jacl/tcl/lang/SeekCmd.java (cmdProc): Pass interp
	argument to channel's seek command. Don't attempt to
	handle seek not supported case since that will
	be done by the driver.
	* src/jacl/tcl/lang/ServerSocketChannel.java (seek):
	Update method signature to account for changes in Channel
	class. Raise a EACCES posix error code if seek is invoked
	on a server socket so we match Tcl.